# freq-domain-ar

./: .gitignore  README.md  pyproject.toml
freq_ar/: dataset.py  model.py  train.py  utils.py  visualize.py
tests/: test_dataset.py  test_model.py
